// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home should render a preloader 1`] = `
<div
  className="page page__home"
>
  <header
    className="site-header"
  >
    <Connect(SiteNav)
      currentUser={
        Object {
          "fullname": "John Doe",
          "id": 1,
        }
      }
    />
    <section
      className="site-header__hero"
    >
      <h2>
        Delicious recipes, just a search away...
      </h2>
      <input
        className="site-header__hero--input"
        onFocus={[Function]}
        placeholder="what would you like to cook?"
        type="text"
      />
    </section>
  </header>
  <main>
    <div
      className="container"
    >
      <section
        className="page__home--top-rated"
      >
        <header>
          <h1>
            Top Rated
          </h1>
        </header>
        <Preloader />
      </section>
    </div>
  </main>
  <SiteFooter />
</div>
`;

exports[`Home should render top recipes when recipes props is received 1`] = `
<div
  className="page page__home"
>
  <header
    className="site-header"
  >
    <Connect(SiteNav)
      currentUser={
        Object {
          "fullname": "John Doe",
          "id": 1,
        }
      }
    />
    <section
      className="site-header__hero"
    >
      <h2>
        Delicious recipes, just a search away...
      </h2>
      <input
        className="site-header__hero--input"
        onFocus={[Function]}
        placeholder="what would you like to cook?"
        type="text"
      />
    </section>
  </header>
  <main>
    <div
      className="container"
    >
      <section
        className="page__home--top-rated"
      >
        <header>
          <h1>
            Top Rated
          </h1>
        </header>
        <p
          className="no-recipes"
        >
          Sorry no recipes present at the moment
          <span
            aria-label="sad"
            role="img"
          >
            😢  
          </span>
          , please try again later
          <span
            aria-label="please"
            role="img"
          >
            🙏
          </span>
        </p>
        <footer>
          <Pagination
            currentPage={1}
            getRecipesForPage={[Function]}
            pages={Array []}
          />
        </footer>
      </section>
    </div>
  </main>
  <SiteFooter />
</div>
`;

exports[`Home should render top recipes when recipes props is received 2`] = `
<div
  className="page page__home"
>
  <header
    className="site-header"
  >
    <Connect(SiteNav)
      currentUser={
        Object {
          "fullname": "John Doe",
          "id": 1,
        }
      }
    />
    <section
      className="site-header__hero"
    >
      <h2>
        Delicious recipes, just a search away...
      </h2>
      <input
        className="site-header__hero--input"
        onFocus={[Function]}
        placeholder="what would you like to cook?"
        type="text"
      />
    </section>
  </header>
  <main>
    <div
      className="container"
    >
      <section
        className="page__home--top-rated"
      >
        <header>
          <h1>
            Top Rated
          </h1>
        </header>
        <TopRatedRecipeList
          recipes={
            Array [
              Object {
                "User": Object {
                  "fullname": "John Bull",
                  "id": 8,
                  "username": null,
                },
                "createdAt": "2017-11-03T09:51:16.180Z",
                "description": "This is one of my 'go to' recipes and it takes only about 15 minutes from start to finish. The only prep work really is mashing the garlic. The sauce is great on any pasta, but I prefer angel hair or spaghetti.",
                "downVoteCount": 0,
                "favoriteCount": 0,
                "id": 3,
                "img_url": "https://firebasestorage.googleapis.com/v0/b/more-recipes.appspot.com/o/recipes%2F1509702436404?alt=media&token=da3a7ac8-58d3-46da-a71d-c2c1c0cbdfeb",
                "ingredients": Array [
                  "2 tablespoons olive oil",
                  "3 cloves garlic",
                  "2 tablespoons capers",
                  "1 tablespoon anchovy paste",
                  "1 teaspoon red pepper flakes",
                  "1 (24 ounce) jar tomato pasta sauce",
                  "1/4 cup water",
                  "1 cup good-quality crisp white wine",
                  "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
                  "salt and pepper to taste",
                  "1 pound dry spaghetti",
                  "1/4 cup freshly grated Parmesan cheese",
                  "Chopped fresh basil leaves or parsley",
                ],
                "instructions": Array [
                  "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
                  "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
                  "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
                ],
                "name": "Chef John's Spaghetti with Red Clam Sauce",
                "owner": 8,
                "reviews": Array [
                  Object {
                    "User": Object {
                      "fullname": "John Bull",
                      "id": 8,
                      "username": null,
                    },
                    "content": "gwbvgfda",
                    "createdAt": "2017-11-04T07:28:31.732Z",
                    "id": 5,
                    "recipeId": 3,
                    "updatedAt": "2017-11-04T07:28:31.732Z",
                    "userId": 8,
                  },
                ],
                "upVoteCount": 1,
                "updatedAt": "2017-11-09T11:36:49.091Z",
                "viewCount": 1,
              },
              Object {
                "User": Object {
                  "fullname": "Email Mail",
                  "id": 11,
                  "username": null,
                },
                "createdAt": "2017-11-11T09:07:36.283Z",
                "description": "This is one of my 'go to' recipes ",
                "downVoteCount": 0,
                "favoriteCount": 0,
                "id": 106,
                "img_url": "http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg",
                "ingredients": Array [
                  "2 tablespoons olive oil",
                  "3 cloves garlic",
                  "2 tablespoons capers",
                  "1 tablespoon anchovy paste",
                  "1 teaspoon red pepper flakes",
                  "1 (24 ounce) jar tomato pasta sauce",
                  "1/4 cup water",
                  "1 cup good-quality crisp white wine",
                  "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
                  "salt and pepper to taste",
                  "1 pound dry spaghetti",
                  "1/4 cup freshly grated Parmesan cheese",
                  "Chopped fresh basil leaves or parsley",
                ],
                "instructions": Array [
                  "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
                  "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
                  "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
                ],
                "name": "Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref",
                "owner": 11,
                "reviews": Array [],
                "upVoteCount": 0,
                "updatedAt": "2017-11-11T09:07:36.283Z",
                "viewCount": 0,
              },
              Object {
                "User": Object {
                  "fullname": "Email Mail",
                  "id": 11,
                  "username": null,
                },
                "createdAt": "2017-11-11T09:07:34.864Z",
                "description": "This is one of my 'go to' recipes ",
                "downVoteCount": 0,
                "favoriteCount": 0,
                "id": 101,
                "img_url": "http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg",
                "ingredients": Array [
                  "2 tablespoons olive oil",
                  "3 cloves garlic",
                  "2 tablespoons capers",
                  "1 tablespoon anchovy paste",
                  "1 teaspoon red pepper flakes",
                  "1 (24 ounce) jar tomato pasta sauce",
                  "1/4 cup water",
                  "1 cup good-quality crisp white wine",
                  "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
                  "salt and pepper to taste",
                  "1 pound dry spaghetti",
                  "1/4 cup freshly grated Parmesan cheese",
                  "Chopped fresh basil leaves or parsley",
                ],
                "instructions": Array [
                  "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
                  "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
                  "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
                ],
                "name": "Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref",
                "owner": 11,
                "reviews": Array [],
                "upVoteCount": 0,
                "updatedAt": "2017-11-11T09:07:34.864Z",
                "viewCount": 0,
              },
              Object {
                "User": Object {
                  "fullname": "Email Mail",
                  "id": 11,
                  "username": null,
                },
                "createdAt": "2017-11-11T09:07:09.090Z",
                "description": "This is one of my 'go to' recipes ",
                "downVoteCount": 0,
                "favoriteCount": 0,
                "id": 20,
                "img_url": "http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg",
                "ingredients": Array [
                  "2 tablespoons olive oil",
                  "3 cloves garlic",
                  "2 tablespoons capers",
                  "1 tablespoon anchovy paste",
                  "1 teaspoon red pepper flakes",
                  "1 (24 ounce) jar tomato pasta sauce",
                  "1/4 cup water",
                  "1 cup good-quality crisp white wine",
                  "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
                  "salt and pepper to taste",
                  "1 pound dry spaghetti",
                  "1/4 cup freshly grated Parmesan cheese",
                  "Chopped fresh basil leaves or parsley",
                ],
                "instructions": Array [
                  "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
                  "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
                  "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
                ],
                "name": "Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref",
                "owner": 11,
                "reviews": Array [],
                "upVoteCount": 0,
                "updatedAt": "2017-11-11T09:07:09.090Z",
                "viewCount": 0,
              },
              Object {
                "User": Object {
                  "fullname": "Email Mail",
                  "id": 11,
                  "username": null,
                },
                "createdAt": "2017-11-11T09:07:28.891Z",
                "description": "This is one of my 'go to' recipes ",
                "downVoteCount": 0,
                "favoriteCount": 0,
                "id": 82,
                "img_url": "http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg",
                "ingredients": Array [
                  "2 tablespoons olive oil",
                  "3 cloves garlic",
                  "2 tablespoons capers",
                  "1 tablespoon anchovy paste",
                  "1 teaspoon red pepper flakes",
                  "1 (24 ounce) jar tomato pasta sauce",
                  "1/4 cup water",
                  "1 cup good-quality crisp white wine",
                  "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
                  "salt and pepper to taste",
                  "1 pound dry spaghetti",
                  "1/4 cup freshly grated Parmesan cheese",
                  "Chopped fresh basil leaves or parsley",
                ],
                "instructions": Array [
                  "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
                  "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
                  "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
                ],
                "name": "Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref",
                "owner": 11,
                "reviews": Array [],
                "upVoteCount": 0,
                "updatedAt": "2017-11-11T09:07:28.891Z",
                "viewCount": 0,
              },
              Object {
                "User": Object {
                  "fullname": "Email Mail",
                  "id": 11,
                  "username": null,
                },
                "createdAt": "2017-11-11T09:07:11.059Z",
                "description": "This is one of my 'go to' recipes ",
                "downVoteCount": 0,
                "favoriteCount": 0,
                "id": 25,
                "img_url": "http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg",
                "ingredients": Array [
                  "2 tablespoons olive oil",
                  "3 cloves garlic",
                  "2 tablespoons capers",
                  "1 tablespoon anchovy paste",
                  "1 teaspoon red pepper flakes",
                  "1 (24 ounce) jar tomato pasta sauce",
                  "1/4 cup water",
                  "1 cup good-quality crisp white wine",
                  "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
                  "salt and pepper to taste",
                  "1 pound dry spaghetti",
                  "1/4 cup freshly grated Parmesan cheese",
                  "Chopped fresh basil leaves or parsley",
                ],
                "instructions": Array [
                  "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
                  "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
                  "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
                ],
                "name": "Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref",
                "owner": 11,
                "reviews": Array [],
                "upVoteCount": 0,
                "updatedAt": "2017-11-11T09:07:11.059Z",
                "viewCount": 0,
              },
            ]
          }
        />
        <footer>
          <Pagination
            currentPage={1}
            getRecipesForPage={[Function]}
            pages={
              Array [
                1,
                2,
                3,
              ]
            }
          />
        </footer>
      </section>
    </div>
  </main>
  <SiteFooter />
</div>
`;

exports[`Home should render with right amount of elements 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <BrowserRouter>
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "blank",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <Home
        currentUser={
          Object {
            "fullname": "John Doe",
            "id": 1,
          }
        }
        dispatch={[Function]}
        isFetching={false}
      >
        <div
          className="page page__home"
        >
          <header
            className="site-header"
          >
            <Connect(SiteNav)
              currentUser={
                Object {
                  "fullname": "John Doe",
                  "id": 1,
                }
              }
            >
              <SiteNav
                currentUser={
                  Object {
                    "fullname": "John Doe",
                    "id": 1,
                  }
                }
                dispatch={[Function]}
              >
                <nav
                  className="site-header__nav"
                >
                  <div
                    className="nav-wrapper container"
                  >
                    <Link
                      className="brand-logo"
                      replace={false}
                      to="/"
                    >
                      <a
                        className="brand-logo"
                        href="/"
                        onClick={[Function]}
                      >
                        MoreRecipes
                      </a>
                    </Link>
                    <ul
                      className="right hide-on-med-and-down"
                    >
                      <li>
                        <Link
                          replace={false}
                          to="/user/1"
                        >
                          <a
                            href="/user/1"
                            onClick={[Function]}
                          >
                            Profile
                          </a>
                        </Link>
                      </li>
                      <li>
                        <Link
                          className="logout__button"
                          onClick={[Function]}
                          replace={false}
                          to="/logout"
                        >
                          <a
                            className="logout__button"
                            href="/logout"
                            onClick={[Function]}
                          >
                            Sign Out
                          </a>
                        </Link>
                      </li>
                    </ul>
                    <ul
                      className="side-nav"
                      id="mobile-nav"
                    >
                      <li>
                        <Link
                          replace={false}
                          to="/user/1"
                        >
                          <a
                            href="/user/1"
                            onClick={[Function]}
                          >
                            Profile
                          </a>
                        </Link>
                      </li>
                      <li
                        className="logout__button"
                      >
                        <Link
                          className="logout__button"
                          onClick={[Function]}
                          replace={false}
                          to="/logout"
                        >
                          <a
                            className="logout__button"
                            href="/logout"
                            onClick={[Function]}
                          >
                            Sign Out
                          </a>
                        </Link>
                      </li>
                    </ul>
                    <button
                      className="button-collapse"
                      data-activates="mobile-nav"
                    >
                      <i
                        className="material-icons"
                      >
                        menu
                      </i>
                    </button>
                  </div>
                </nav>
              </SiteNav>
            </Connect(SiteNav)>
            <section
              className="site-header__hero"
            >
              <h2>
                Delicious recipes, just a search away...
              </h2>
              <input
                className="site-header__hero--input"
                onFocus={[Function]}
                placeholder="what would you like to cook?"
                type="text"
              />
            </section>
          </header>
          <main>
            <div
              className="container"
            >
              <section
                className="page__home--top-rated"
              >
                <header>
                  <h1>
                    Top Rated
                  </h1>
                </header>
                <p
                  className="no-recipes"
                >
                  Sorry no recipes present at the moment
                  <span
                    aria-label="sad"
                    role="img"
                  >
                    😢  
                  </span>
                  , please try again later
                  <span
                    aria-label="please"
                    role="img"
                  >
                    🙏
                  </span>
                </p>
                <footer>
                  <Pagination
                    currentPage={1}
                    getRecipesForPage={[Function]}
                    pages={Array []}
                  >
                    <ul
                      className="pagination"
                    >
                      <li
                        className="disabled"
                        id="pagination__prev"
                      >
                        <button
                          onClick={[Function]}
                        >
                          <i
                            className="material-icons"
                          >
                            chevron_left
                          </i>
                        </button>
                      </li>
                      <li
                        className="waves-effect"
                        id="pagination__next"
                      >
                        <button
                          onClick={[Function]}
                        >
                          <i
                            className="material-icons"
                          >
                            chevron_right
                          </i>
                        </button>
                      </li>
                    </ul>
                  </Pagination>
                </footer>
              </section>
            </div>
          </main>
          <SiteFooter>
            <footer
              className="page-footer"
            >
              <div
                className="container"
              >
                <p>
                  Crafted with 
                  <i
                    className="mdi mdi-heart"
                  />
                   by 
                  <a
                    href="http://william.ng/"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    William I. Olojede
                  </a>
                </p>
              </div>
            </footer>
          </SiteFooter>
        </div>
      </Home>
    </Router>
  </BrowserRouter>
</Provider>
`;
